--- a/release/changelog.html
+++ b/release/changelog.html
@@ -3,10 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Ex nihilo - Battery Information Manager</title>
+  <style type="text/css">
+  .new {
+    color: #0095ff;
+  }
+  </style>
 </head>
 <body>
-  <h1>Ex nihilo changelog</h1>
-  <dl>
+  <h1>Changelog of Ex nihilo</h1>
+  <dl class="new">
     <dt>v1.7.1</dt>
     <dd>Display the type of GPU (integrated or discrete)</dd>
   </dl>
