--- a/release/changelog.html
+++ b/release/changelog.html
@@ -12,6 +12,10 @@
 <body>
   <h1>Changelog of Ex nihilo</h1>
   <dl class="new">
+    <dt>v1.7.2</dt>
+    <dd>Refactor the indicator of battery power</dd>
+  </dl>
+  <dl>
     <dt>v1.7.1</dt>
     <dd>Display the type of GPU (integrated or discrete)</dd>
   </dl>
