--- a/release/changelog.html
+++ b/release/changelog.html
@@ -12,6 +12,10 @@
 <body>
   <h1>Changelog of Ex nihilo</h1>
   <dl class="new">
+    <dt>v1.7.4</dt>
+    <dd>Hotfix power indicator animation</dd>
+  </dl>
+  <dl>
     <dt>v1.7.3</dt>
     <dd>Hotfix power indicator</dd>
   </dl>
